force-app/main/default/objects/GoogleMapsSettings__c/GoogleMapsSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Paramètres pour les cartes Google Maps (Cartographie, Comptes, Chantiers)</description>
    <label>Google Maps</label>
</CustomObject>