force-app/main/default/objects/GoogleMapsSettings__c/fields/Cle_API__c.field-meta.xml
<CustomField>
    <fullName>Cle_API__c</fullName>
    <description>Clé API pour Google Maps</description>
    <label>Clé API</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>