force-app/main/default/objects/GoogleMapsSettings__c/fields/Couleur_du_contour_secteur__c.field-meta.xml
<CustomField>
    <fullName>Couleur_du_contour_secteur__c</fullName>
    <defaultValue>&quot;#FF0000&quot;</defaultValue>
    <description>Couleur du contour des secteurs</description>
    <label>Couleur du contour secteur</label>
    <length>7</length>
    <type>Text</type>
</CustomField>