force-app/main/default/objects/GoogleMapsSettings__c/fields/Couleur_du_fond_secteur__c.field-meta.xml
<CustomField>
    <fullName>Couleur_du_fond_secteur__c</fullName>
    <defaultValue>&quot;#eaeaea&quot;</defaultValue>
    <description>Couleur du fond des secteurs</description>
    <label>Couleur du fond secteur</label>
    <length>7</length>
    <type>Text</type>
</CustomField>