force-app/main/default/objects/GoogleMapsSettings__c/fields/Deplacement__c.field-meta.xml
<CustomField>
    <fullName>Deplacement__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Affiche ou non le contrôle pour le déplacement de la carte</description>
    <label>Déplacement ?</label>
    <type>Checkbox</type>
</CustomField>