force-app/main/default/objects/GoogleMapsSettings__c/fields/Distance__c.field-meta.xml
<CustomField>
    <fullName>Distance__c</fullName>
    <description>Distance de recherche d&apos;un panorama pour Street View</description>
    <inlineHelpText>Seulement pour Street View (Comptes et Chantiers)</inlineHelpText>
    <label>Distance</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>