force-app/main/default/objects/GoogleMapsSettings__c/fields/Latitude_initiale__c.field-meta.xml
<CustomField>
    <fullName>Latitude_initiale__c</fullName>
    <description>Latitude initiale pour chargement de la carte</description>
    <label>Latitude initiale</label>
    <precision>9</precision>
    <scale>7</scale>
    <type>Number</type>
</CustomField>