force-app/main/default/objects/GoogleMapsSettings__c/fields/Longitude_initiale__c.field-meta.xml
<CustomField>
    <fullName>Longitude_initiale__c</fullName>
    <description>Longitude initiale pour chargement de la carte</description>
    <label>Longitude initiale</label>
    <precision>9</precision>
    <scale>7</scale>
    <type>Number</type>
</CustomField>