force-app/main/default/objects/GoogleMapsSettings__c/fields/Rotation__c.field-meta.xml
<CustomField>
    <fullName>Rotation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Affiche ou non le contrôle pour la rotation</description>
    <label>Rotation ?</label>
    <type>Checkbox</type>
</CustomField>