force-app/main/default/objects/GoogleMapsSettings__c/fields/Street_View__c.field-meta.xml
<CustomField>
    <fullName>Street_View__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Affiche ou non le contrôle pour Street View</description>
    <label>Street View ?</label>
    <type>Checkbox</type>
</CustomField>