force-app/main/default/objects/GoogleMapsSettings__c/fields/Zoom__c.field-meta.xml
<CustomField>
    <fullName>Zoom__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Affiche ou non le contrôle pour le zoom</description>
    <label>Zoom ?</label>
    <type>Checkbox</type>
</CustomField>