force-app/main/default/objects/GoogleMapsSettings__c/fields/Zoom_initial__c.field-meta.xml
<CustomField>
    <fullName>Zoom_initial__c</fullName>
    <label>Zoom initial</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>